@@ -1,5 +1,6 @@
 2014-10-02:
 	* (seebs) use sqlite3_bind_int64 for inodes.
+	* (seebs) suppress path mismatch warnings for did_unlink.
 
 2014-07-18:
 	* (seebs) Make "server already offline" message into a debugging
